--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -1,39 +1,3 @@
-.aboutSection {
-  position: relative;
-  display: flex;
-  padding-block: 24px;
-  background-color: var(--color-palette-dark);
-  color: var(--text-white);
-}
-
-.contentWrapper {
-  margin-inline: var(--inline-gutter);
-  display: flex;
-  flex-grow: 1;
-  max-width: 1280px;
-  padding: 2rem 1rem;
-}
-
-.textContent {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 16px;
-  width: 40%;
-}
-
-.subtitle {
-  text-transform: uppercase;
-  margin-bottom: 16px;
-  font-size: 0.825rem;
-  font-weight: 600;
-  opacity: 0.8;
-}
-
-.paragraph {
-  opacity: 0.8;
-}
-
 .certifications {
   display: flex;
   flex-direction: column;
@@ -42,15 +6,18 @@
 }
 
 .stampsList {
-  padding: 16px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 24px 16px;
+  margin-bottom: auto;
 }
 
-.divider {
-  height: 4px;
-  width: 40px;
-  margin-block: 24px;
-  background-color: var(--color-palette-highlight);
+.certificateContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.25rem;
 }
