--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   padding: 16px;
-  width: 60%;
+  flex: 3;
+  min-width: min(400px, 100%);
 }
 
 .stampsList {
