--- a/components/templates/template.module.css
+++ b/components/templates/template.module.css
@@ -10,7 +10,8 @@
   display: flex;
   flex-grow: 1;
   gap: 2rem;
-  max-width: 1280px;
+  flex-wrap: wrap;
+  max-width: 1440px;
   margin-inline: auto;
   padding: 2rem 1rem;
 }
@@ -19,7 +20,7 @@
   display: flex;
   justify-content: center;
   flex-grow: 1;
-  max-width: 1280px;
+  max-width: 1440px;
   margin-inline: auto;
   padding: 2rem 1rem;
 }
@@ -29,7 +30,8 @@
   flex-direction: column;
   justify-content: center;
   padding: 16px;
-  width: 40%;
+  flex: 2;
+  min-width: min(390px, 100%);
 }
 
 .singleColumnContent {
@@ -60,6 +62,6 @@
 .divider {
   height: 4px;
   width: 40px;
-  margin-block: 24px;
+  margin-block: 32px;
   background-color: var(--color-palette-highlight);
 }
