--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  justify-content: center;
   gap: 16px;
   padding-block: 16px;
   min-width: 300px;
