--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -16,7 +16,13 @@
   display: flex;
   flex-direction: column;
   flex-grow: 3;
+  padding-top: 16px;
+  justify-content: center;
   min-width: 450px;
+}
+
+.companyLogo {
+  margin-block: 16px;
 }
 
 .socialMediaContainer {
