--- a/components/HeroSection/HeroSections.module.css
+++ b/components/HeroSection/HeroSections.module.css
@@ -40,6 +40,7 @@
   letter-spacing: -0.02em;
   color: white;
   font-family: var(--font-calya);
+  text-transform: uppercase;
 }
 
 @media (min-width: 768px) {
