--- a/components/Approach/Approach.module.css
+++ b/components/Approach/Approach.module.css
@@ -1,26 +1,30 @@
 .approachDetailsContainer {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
   gap: 1rem;
 }
 
 .approachDetail {
   display: flex;
-  gap: 0.5rem;
+  gap: 1rem;
   align-items: center;
+  width: calc(50% - 1rem);
 }
 
 .timelineContainer {
   display: flex;
   flex: 3;
-  gap: 4px;
   flex-wrap: wrap;
+  flex-direction: row;
   align-items: center;
+  justify-content: center;
+  gap: 4px;
+  padding-inline: 32px;
 }
 
 .timelineItem {
   display: flex;
-  flex: 1;
   height: fit-content;
   gap: 0.25rem;
 }
@@ -33,10 +37,11 @@
   display: flex;
   flex-direction: column;
   padding: 8px;
+  margin-block: 8px;
   min-width: 155px;
   max-width: 260px;
-  background-color: var(--color-palette-background);
-  color: var(--color-palette-dark);
+  background-color: #373737;
+  color: var(--text-white);
   border-radius: 4px;
   font-size: 0.875rem;
   gap: 0.375rem;
@@ -44,4 +49,32 @@
 
 .timelineItemCardTitle {
   text-align: center;
+}
+
+@media (max-width: 700px) {
+  .timelineContainer {
+    flex-direction: column;
+  }
+
+  .timelineItem {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .timelineItemCard {
+    max-width: 320px;
+    padding: 16px;
+  }
+
+  .timelineArrow {
+    margin-inline: auto;
+  }
+
+  .timelineArrow img {
+    transform: rotate(90deg);
+  }
+
+  .approachDetail {
+    width: 100%;
+  }
 }
